[tool.poetry]
name = "crypto-risk-manager-pro"
version = "3.1.0"
description = "CBQRA‑powered crypto risk dashboard"
authors = ["JCP9415 <money.makes.her.horny@gmailcom>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = ">=1.38.0"
pandas = ">=2.2.0"
numpy = ">=1.26.0"
matplotlib = ">=3.9.0"
pymc = ">=5.16.0"
arviz = ">=0.19.0"
scipy = ">=1.13.0"
seaborn = ">=0.13.2"
pyarrow = ">=15.0.0"
thefuzz = ">=0.22.1"
python-levenshtein = ">=0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
